# DriftPin

./: .dockerignore  .env.example  .gitignore  DESIGN_DECISIONS.md  Dockerfile  EVALS.md  README.md  docker-compose.yml  pyproject.toml
agents/: ac_fallback.yaml  consistency-checker.yaml  functional-tester.yaml  lifecycle-entities.yaml  nfr-applicability.yaml  reviewer.yaml  reviewer_fallback.yaml  test-architect.yaml
evals/adversarial/pocketbudget_official/: pocketbudget-prd.md
evals/golden/: README.md  prd-1-voice-assistant-fab.md
prompts/: ac_fallback.md.j2  consistency_checker.md.j2  extraction.md.j2  functional_tester.md.j2  lifecycle_entities.md.j2  nfr_applicability.md.j2  reviewer.md.j2  reviewer_fallback.md.j2  test_architect.md.j2
samples/: README.md  adversarial-account-lifecycle-prd.md  checkout_prd.md  password_reset_prd.md
src/driftpin/: __init__.py  __main__.py  paths.py
src/driftpin/agents/: __init__.py  loader.py  orchestrator.py  runtime.py
src/driftpin/cli/: __init__.py  actions.py  app.py  init_wizard.py  repl.py
src/driftpin/config/: __init__.py  secrets.py  settings.py
src/driftpin/consistency/: checker.py  pairs.py
src/driftpin/ingestion/: __init__.py  ac_parser.py  extractor.py  parsers.py  (+3 more)
tests/: conftest.py  test_ac_parser.py  test_actions.py  test_agent_loader.py  test_anthropic_provider.py  test_consistency_checker.py  test_consistency_pairs.py  test_extractor.py  test_groq_provider.py  test_ingestion_parsers.py  test_init_wizard.py  test_labels.py  test_ledger.py  test_nvidia_provider.py  test_ollama_provider.py  test_orchestrator.py  test_paths.py  test_provider_factory.py  test_providers.py  test_registry.py  test_renderers.py  test_repl.py  test_review_schema.py  test_schemas.py  test_structured_retry.py  test_vectorstore.py
(+22 files in other folders)
