[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftpin"
version = "0.1.0"
description = "Requirement-centric agentic QA system with end-to-end traceability from product requirements to test execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Nikhil Tulsani", email = "nikhil.tulsani1@gmail.com" },
]
keywords = ["qa", "testing", "requirements-traceability", "agentic", "test-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "anthropic>=0.34,<1",
    "httpx>=0.27,<1",
    "chromadb>=0.5,<1",
    "openpyxl>=3.1,<4",
    "pypdf>=4.2,<5",
    "python-docx>=1.1,<2",
    "keyring>=25.2,<26",
    "cryptography>=42.0,<43",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-mock>=3.14,<4",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-PyYAML",
]

[project.scripts]
driftpin = "driftpin.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/driftpin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
